--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
       }
 
     function keyPressed(evt){
-      if(evt.keyCode == 37){
+      if(evt.keyCode == 37 || evt.keyCode == 87){
         playerXVel = -1;
         playerYVel = 0;
-      } else if(evt.keyCode == 39){
+      } else if(evt.keyCode == 39 || evt.keyCode == 83){
         playerXVel = 1;
         playerYVel = 0;
       }
-      if(evt.keyCode == 38){
+      if(evt.keyCode == 38 || evt.keyCode == 65){
         playerXVel = 0;
         playerYVel = -1;
-      } else if(evt.keyCode == 40){
+      } else if(evt.keyCode == 40 || evt.keyCode == 68){
         playerXVel = 0;
         playerYVel = 1;
       }
