--- a/index.html
+++ b/index.html
@@ -99,3 +99,22 @@
     }
 
 </script>
+
+<style>
+  body {background-color: #151515;}
+  canvas{
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: block;
+    width: 400px;
+    border: #151515;
+  }
+
+
+</style>
