--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <head>
     <link rel="stylesheet" href="main.css">
-    <script src="libs/p5.js"></script>
+    <!--<script src="libs/p5.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
     <script src="main.js"></script>
 </head>
 
@@ -15,7 +16,7 @@
     </select>
 
     <label for="color-selector">Number of Colors:</label>
-    <select>
+    <select id="col-sel">
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
@@ -36,4 +37,9 @@
     <div class="generateImage">
         <button id="genrerate" onclick="generateImage()">Generate Pattern</button>
     </div>
+
+    <div>
+        <button id="download" onclick="downloadPattern()">Download Pattern</button>
+    </div>
+
 </body>
