--- a/index.html
+++ b/index.html
@@ -1,45 +1,31 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" href="main.css">
-    <!--<script src="libs/p5.js"></script>-->
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
-    <script src="main.js"></script>
+
+    <title>Test</title>
+
+    <div class="nav">
+        <a class="active", href="index.html">Home</a>
+        <a href="html/about.html">About</a>
+        <a href="html/projects.html">Projects</a>
+        <a href="html/snake.html">Snake</a>
+    </div>
+
+    <!--<canvas id="canvas" width = "600" height = "600"></canvas>-->
+
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/design.css">
+    <link rel="stylesheet" href="css/nav.css">
+
+    <script src="js/three.js"></script>
+    <!--<script src="js/cube.js"></script>-->
+
+
+    
+
 </head>
 
 <body>
-    <div class="selectors">
-    <label for="is-round">Shape:</label>
-    <select name="round selector" id="is-round">
-        <option value="rect">Rectangle</option>
-        <option value="round">Round</option>
-    </select>
 
-    <label for="color-selector">Number of Colors:</label>
-    <select id="col-sel">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-    </select>
-    </div>
-
-    <div class="dateInput">
-        <label>Date for Pattern:</label>
-        <input id="date" type="date" value="2018-07-22">
-    </div>
-
-    <div class="dimensionsInput">
-        <label>Dimensions:</label> 
-        <input id="width" type="number" min="20" max="800" value="100" pattern="/d+" placeholder="width in cm">
-        <input id="height" type="number" min="20" max="800" value="100" pattern="/d+" placeholder="height in cm">
-    </div>
-    
-    <div class="generateImage">
-        <button id="genrerate" onclick="generateImage()">Generate Pattern</button>
-    </div>
-
-    <div>
-        <button id="download" onclick="downloadPattern()">Download Pattern</button>
-    </div>
 
 </body>
